<resources>
    <string name="app_name">Sincara</string>
    <string name="message">%1$s diklik!</string>
    <string name="koneksi_error">Koneksi error</string>

    //String Dashboard
    <string name="txtAyoBelajar">Ayo Semangat Belajar!</string>
    <string name="txtSelamatDatang">Selamat Datang di Sincara!</string>
    <string name="txtMariBelajar">Mari Belajar Bersama Bahasa Isyarat!</string>
    <string name="txtCariTahu">Cari tahu ada apa saja di Sincara!</string>
    <string name="txtAlfabet">Alphabet Bahasa Isyarat</string>
    <string name="txtAngka">Angka Bahasa Isyarat</string>
    <string name="txtSejarah">Sejarah Bahasa Isyarat</string>
    <string name="txtTips">Tips dan Trik Belajar</string>

    //String Login
    <string name="log_gugel">Login With Google</string>
    <string name="log_fb">Login With Facebook</string>
    <string name="logout">Sincara</string>
    <string name="keluar">Keluar</string>

    //String Angka Isyarat
    <string name="txtTahuAngka">Mari cari tahu angka dalam bahasa isyarat</string>
    <string name="switch_layout">Ubah Tampilan</string>
    <string name="profile_layout">Masuk Profil</string>

    //String Profil
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="email_isinya">Email</string>
    <string name="nomor_telepon">Nomor Telepon</string>

    //String Fragment
    <string name="dashboardFragment">Dashboard</string>
    <string name="angkaFragment">Angka Isyarat</string>
    <string name="hurufFragment">Huruf Isyarat</string>
    <string name="profileFragment">Profil Pribadi</string>
    <string name="tipsFragment">Tips dan Trik Bahasa Isyarat</string>
    <string name="sehariFragment">Meningkatkan Keterampilan</string>
    <string name="pdFragment">Mengatasi Rasa Malu</string>
    <string name="kulturFragment">Memahami Perbedaan Kultur</string>
    <string name="kosakataFragment">Meningkatkan Kosa Kata Bahasa</string>
    <string name="kendalaFragment">Mengatasi Kendala</string>
    <string name="sejarahFragment">Sejarah Bahasa Isyarat</string>


    //String Splash
    <string name="splash_screen__string">Designed by Sincara</string>


    //Cara
    <string name="cara1">Meningkatkan Keterampilan Isyarat Bahasa Isyarat melalui Latihan Sehari-hari</string>
    <string name="cara2">Mengatasi Rasa Malu dan Meningkatkan Kepercayaan Diri dalam Menggunakan Bahasa Isyarat</string>
    <string name="cara3">Memahami Perbedaan Kultur dalam Bahasa Isyarat untuk Komunikasi yang Lebih Baik</string>
    <string name="cara4">Mengatasi Kendala dalam Belajar Bahasa Isyarat dengan Mudah</string>
    <string name="cara5">Meningkatkan Kosa Kata Bahasa Isyarat dengan Cara yang Mudah</string>
    <string name="tipstrik">Tips dan Trik</string>

    //Deskripsi

    <string name="desk1">Meningkatkan bahasa isyarat tentu saja tidak mudah, harus dengan latihan yang konsisten dan dedikasi. Nah berikut ini ada tips dan trik menarik dari Sincara.\n\nPertama, luangkan waktu setiap hari untuk melatih isyarat. Anda dapat mengulangi gerakan-gerakan dasar danmengingat kosakata isyarat yang telah dipelajari. Awali dengan huruf dan angka isyarat, lalu perluas dengankata-kata sehari-hari seperti makanan, benda-benda di sekitar, atau kegiatan sehari-hari.\n\nKedua, manfaatkan situasi sehari-hari untuk berlatih komunikasi dalam bahasa isyarat. Anda dapat menggunakan bahasa isyarat ketika berbicara dengan teman atau keluarga yang juga belajar bahasa isyarat, atau bahkan mencoba berkomunikasi dengan diri sendiri melalui isyarat saat melakukan tugas-tugas rutin seperti memasak, membersihkan, atau berjalan.\n\nKetiga, cari teman atau mitra belajar untuk berlatih bersama. Dengan memiliki seseorang yang juga belajar bahasa isyarat, Anda dapat berlatih melalui percakapan, bertukar peran sebagai pengirim dan penerima isyarat, dan memberikan umpan balik satu sama lain. Hal ini akan membantu meningkatkan kefasihan dan kepercayaan diri Anda dalam menggunakan bahasa isyarat dalam konteks komunikasi nyata.\n\nTerakhir, jangan lupa untuk berpartisipasi dalam kegiatan atau acara yang melibatkan komunitas bahasa isyarat. Ikuti kelompok diskusi, lokakarya, atau acara sosial yang dihadiri oleh penutur asli atau mereka yang mahir dalam bahasa isyarat. Berinteraksi dengan komunitas bahasa isyarat akan memperluas pemahaman Anda tentang budaya isyarat dan memberikan kesempatan untuk berlatih dalam konteks yang nyata.</string>
    <string name="desk2">Mengatasi rasa malu dan meningkatkan kepercayaan diri dalam menggunakan bahasa isyarat membutuhkan waktu dan usaha. Sincara mempunyai tips and trik cara yang dapat kalian terapkan untuk mengatasi rasa malu dan meningkatkan kepercayaan diri dalam menggunakan bahasa isyarat:\n\nPertama, terimalah bahwa rasa malu adalah hal yang alami dalam proses pembelajaran. Jangan terlalu keras pada diri sendiri jika Anda membuat kesalahan atau merasa canggung saat menggunakan bahasa isyarat. Ingatlah bahwa setiap orang yang belajar bahasa isyarat pernah mengalami hal yang sama. Jadilah sabar dengan diri sendiri dan fokus pada kemajuan yang Anda buat.\n\nKedua, cari dukungan dari komunitas bahasa isyarat. Bergabunglah dengan kelompok atau komunitas yang memiliki minat yang sama dalam belajar bahasa isyarat. Berinteraksi dengan orang-orang yang sedang dalam perjalanan belajar yang sama dapat memberikan dukungan dan inspirasi. Anda dapat berbagi pengalaman, belajar bersama, dan merasa lebih nyaman berlatih menggunakan bahasa isyarat di lingkungan yang mendukung.\n\nKetiga, berlatih secara konsisten. Semakin sering Anda berlatih, semakin meningkat keahlian Anda dalam menggunakan bahasa isyarat. Dengan latihan yang konsisten, Anda akan merasa lebih percaya diri karena semakin familiar dengan gerakan dan tata bahasa isyarat. Buatlah jadwal rutin untuk berlatih bahasa isyarat setiap hari, baik melalui latihan sendiri, berinteraksi dengan orang lain, atau melalui sumber belajar online.\n\nTerakhir, jangan takut untuk meminta bantuan dan umpan balik. Jika Anda merasa kesulitan atau tidak yakin tentang penggunaan isyarat tertentu, jangan ragu untuk meminta bantuan dari guru, instruktur, atau penutur asli bahasa isyarat. Menerima umpan balik akan membantu Anda memperbaiki dan mengasah keterampilan bahasa isyarat Anda.</string>
    <string name="desk3">Memahami perbedaan budaya dalam bahasa isyarat sangat penting untuk mencapai komunikasi yang lebih baik. Berikut adalah beberapa cara untuk memahami perbedaan kultur dalam bahasa isyarat dan meningkatkan komunikasi:\n\nPertama, belajarlah tentang budaya dan sejarah komunitas bahasa isyarat yang berbeda. Setiap komunitas bahasa isyarat memiliki budaya, tradisi, dan nilai-nilai yang unik. Meneliti dan mempelajari aspek-aspek ini akan membantu Anda memahami latar belakang budaya komunitas bahasa isyarat yang Anda ingin berkomunikasi dengannya. Pahami perbedaan dalam tata bahasa, gerakan tubuh, ekspresi wajah, dan norma-norma sosial yang mungkin berbeda di antara komunitas bahasa isyarat.\n\nKedua, berinteraksilah dengan penutur asli bahasa isyarat dari berbagai budaya. Menghadiri acara atau pertemuan yang dihadiri oleh penutur asli bahasa isyarat dari berbagai latar belakang budaya akan memberikan kesempatan untuk belajar dan berlatih komunikasi dengan mereka. Ini akan membantu Anda memperluas pemahaman Anda tentang perbedaan budaya dalam bahasa isyarat dan meningkatkan keterampilan komunikasi lintas budaya.\n\nKetiga, perhatikan dan hormati perbedaan budaya dalam bahasa isyarat. Ketika berkomunikasi dengan penutur asli bahasa isyarat dari budaya yang berbeda, perhatikan perbedaan dalam gerakan tangan, mimik wajah, dan ekspresi tubuh.\n\nDalam upaya untuk memahami perbedaan budaya dalam bahasa isyarat, penting untuk memiliki sikap terbuka, rasa ingin tahu, dan kemauan untuk belajar. Dengan menghormati dan memahami perbedaan budaya dalam bahasa isyarat, Anda akan dapat menciptakan hubungan yang lebih baik, memperkaya pengalaman komunikasi Anda, dan membangun pengertian lintas budaya yang lebih dalam.</string>
    <string name="desk4">Menghadapi kendala dalam belajar bahasa isyarat adalah hal yang umum, tetapi ada beberapa cara untuk mengatasinya dengan mudah. Berikut adalah beberapa tips yang dapat membantu Anda mengatasi kendala dalam belajar bahasa isyarat:\n\nPertama, tetapkan tujuan yang realistis dan terukur. Tentukan dengan jelas apa yang ingin Anda capai dalam belajar bahasa isyarat dan pecahkannya menjadi tujuan yang lebih kecil dan terukur. Misalnya, tujuan awal Anda mungkin adalah menguasai kosa kata dasar atau memahami tata bahasa dasar. Dengan memiliki tujuan yang jelas, Anda dapat mengatur langkah-langkah konkret untuk mencapainya dan memantau kemajuan Anda seiring waktu.\n\nKedua, temukan sumber belajar yang sesuai dengan gaya belajar Anda. Setiap individu memiliki gaya belajar yang berbeda-beda, jadi penting untuk menemukan sumber belajar yang cocok untuk Anda. Apakah Anda lebih memilih belajar melalui buku, video tutorial, aplikasi, atau berinteraksi langsung dengan penutur asli bahasa isyarat? Cari tahu metode belajar yang paling efektif bagi Anda dan manfaatkan sumber daya tersebut.\n\nKetiga, jangan takut untuk bertanya dan mencari bantuan. Jika Anda menghadapi kesulitan atau tidak memahami sesuatu dalam belajar bahasa isyarat, jangan ragu untuk bertanya kepada guru, instruktur, atau komunitas bahasa isyarat. Mereka akan senang membantu Anda dan memberikan penjelasan yang lebih jelas. Meminta bantuan akan membantu Anda mengatasi hambatan dan mempercepat proses belajar Anda.\n\nDalam mengatasi kendala dalam belajar bahasa isyarat, penting untuk mengambil langkah-langkah yang konsisten, mencari bantuan ketika diperlukan, dan memiliki sikap yang positif terhadap kesalahan. Dengan mempraktikkan tips ini, Anda akan dapat mengatasi kendala dengan lebih mudah dan mengembangkan keterampilan bahasa isyarat Anda dengan lebih baik.</string>
    <string name="desk5">Untuk meningkatkan kosa kata bahasa isyarat dengan cara yang mudah, ada beberapa langkah yang dapat Anda ikuti. Pertama, luangkan waktu untuk mempelajari kosakata baru setiap hari. Anda dapat menggunakan sumber belajar, seperti buku, aplikasi, atau video tutorial, yang menawarkan kumpulan kosakata bahasa isyarat. Mulailah dengan kata-kata yang paling umum dan penting dalam komunikasi sehari-hari, kemudian perlahan-lahan perluas kosakata Anda sesuai minat dan kebutuhan Anda.\n\nKedua, berlatihlah menggunakan kosakata baru dalam konteks yang relevan. Misalnya, buat kalimat atau dialog menggunakan kata-kata baru yang telah Anda pelajari. Latihan ini akan membantu Anda mengaitkan kosakata dengan situasi nyata dan memperkuat pemahaman Anda tentang penggunaannya. Anda juga dapat berlatih dengan teman atau anggota komunitas bahasa isyarat untuk memperoleh umpan balik dan meningkatkan kefasihan Anda.\n\nKetiga, gunakan teknik memvisualisasikan kosakata dalam pikiran Anda. Ketika Anda belajar kosakata baru, cobalah membayangkan gambar atau situasi yang terkait dengan kata tersebut. Misalnya, jika Anda belajar kosakata tentang makanan, bayangkan gambar makanan tersebut dalam pikiran Anda. Teknik ini membantu memperkuat koneksi antara kata dan maknanya, sehingga memudahkan Anda mengingat dan menggunakannya dengan lancar.\n\nTerakhir, perluas kosakata dengan menggunakan kamus bahasa isyarat. Kamus bahasa isyarat adalah sumber yang berharga untuk memperoleh kosakata baru dan mempelajari cara mengartikan kata-kata dalam bahasa isyarat. Gunakan kamus bahasa isyarat secara teratur untuk mencari kata-kata yang belum Anda ketahui, serta untuk memperdalam pemahaman Anda tentang arti dan gerakan isyarat yang tepat.</string>

    //Sejarah
    <string name="sejarahjudul">Sejarah Bahasa Isyarat</string>
    <string name="sejarah">Sejarah</string>
    <string name="sejarahdeskripsi">Sejarah bahasa isyarat mencakup perkembangan dan penggunaan sistem komunikasi visual yang digunakan oleh komunitas tunarungu dan pendengar dengan gangguan pendengaran. Bahasa isyarat adalah bentuk komunikasi non-verbal yang menggunakan gerakan tangan, ekspresi wajah, dan gerakan tubuh untuk menyampaikan pesan.\n\nAbad ke-16 hingga 18: Meskipun bahasa isyarat telah digunakan secara alami oleh komunitas tunarungu selama ribuan tahun, pada abad ke-16 hingga ke-18, sejumlah upaya dilakukan untuk mengembangkan sistematisasi bahasa isyarat. Pada periode ini, Pedro Ponce de Leon, seorang biarawan Spanyol, dikenal sebagai salah satu orang pertama yang mengajarkan bahasa isyarat kepada anak-anak tunarungu.\n\nAbad ke-19: Pada abad ke-19, penemuan sekolah bahasa isyarat menjadi penting dalam sejarah bahasa isyarat. Pada tahun 1817, Abbe Charles-Michel de lepee mendirikan Institut National de Jeunes Sourds de Paris (INJS) di Prancis, yang berfokus pada pendidikan anak-anak tunarungu dan pengembangan sistem bahasa isyarat. Kontribusinya dianggap sebagai tonggak dalam pengembangan bahasa isyarat modern.\n\nAbad ke-20: Pada awal abad ke-20, Alexander Graham Bell dan kelompok pendukungnya berusaha untuk melarang penggunaan bahasa isyarat dan mendorong penggunaan bahasa lisan dan metode pendengaran. Namun, dukungan terhadap bahasa isyarat tetap ada, dan pada tahun 1950-an dan 1960-an, gerakan terhadap pengakuan bahasa isyarat sebagai bahasa sah semakin berkembang.</string>


</resources>