...
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardboard" />

    <ImageButton
        android:id="@+id/tombolAlfabet"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/card_alphabet_shape"
        android:contentDescription="@string/txtAlfabet"
        app:layout_constraintStart_toStartOf="@+id/textCariDashboard"
...
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/gambarAlfabet"
        app:layout_constraintStart_toStartOf="@+id/gambarAlfabet"
        app:layout_constraintTop_toBottomOf="@+id/gambarAlfabet" />

    <ImageButton
        android:id="@+id/tombolAngka"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/card_angka__shape"
        android:contentDescription="@string/txtAngka"
...
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/gambarAngka"
        app:layout_constraintStart_toStartOf="@+id/gambarAngka"
        app:layout_constraintTop_toBottomOf="@+id/gambarAngka" />

    <ImageButton
        android:id="@+id/tombolKomnunikasi"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/card_komunikasi_shape"
        android:contentDescription="@string/txtTips"
        app:layout_constraintStart_toStartOf="@+id/textCariDashboard"
...
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/gambarKomunikasi"
        app:layout_constraintStart_toStartOf="@+id/gambarKomunikasi"
        app:layout_constraintTop_toBottomOf="@+id/gambarKomunikasi" />

    <ImageButton
        android:id="@+id/tombolKamus"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/card_kamus_shape"
        android:contentDescription="@string/txtSejarah"
...
        app:layout_constraintEnd_toEndOf="@+id/gambarKamus"
        app:layout_constraintStart_toStartOf="@+id/gambarKamus"
        app:layout_constraintTop_toBottomOf="@+id/gambarKamus" />


    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bulat_profil"
        app:layout_constraintBottom_toBottomOf="@+id/textBelajarDashboard"
...
