...
        android:layout_height="wrap_content"
        android:text="08123456789"
        app:layout_constraintStart_toStartOf="@+id/textNomor"
        app:layout_constraintTop_toBottomOf="@+id/textNomor" />

    <Button
        android:id="@+id/butLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Logout"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textNomornya"
        app:layout_constraintVertical_bias="1.0" />
...
